cabal-version:   3.0
name:            aoc23
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          sebastianselander
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall -Wextra

common extensions
  default-extensions:
    ImplicitParams
    LambdaCase
    OverloadedRecordDot
    OverloadedStrings
    TypeApplications

executable aoc23
  import:           warnings, extensions
  main-is:          Main.hs
  other-modules:
    Lude
    Solutions.Day1
  build-depends:
    , algebraic-graphs
    , ansi-terminal
    , base                  >=4.16
    , containers
    , deepseq
    , directory
    , extra
    , memoize
    , mtl
    , pretty-simple
    , search-algorithms
    , text
    , megaparsec
    , text-show
    , time
    , unordered-containers
    , vector
    , parser-combinators
    , regex

  hs-source-dirs:   src
  default-language: GHC2021
