cabal-version:   3.0
name:            aoc23
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          sebastianselander
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall
               -Wextra

common extensions
  default-extensions:
    LambdaCase
    OverloadedRecordDot
    OverloadedStrings
    TypeApplications
    MultiWayIf

executable aoc23
  import:           warnings,
                    extensions
  main-is:          Main.hs
  other-modules:
    Lude
    Day01
    Day02
    Day03
    Day04
    Day05
    Day06
    Day07
    Day08
    Day09
  build-depends:
    , base                  >=4.16
    , algebraic-graphs
    , ansi-terminal
    , containers
    , deepseq
    , directory
    , extra
    , megaparsec
    , memoize
    , mtl
    , parser-combinators
    , pretty-simple
    , regex
    , search-algorithms
    , text
    , text-show
    , time
    , unordered-containers
    , vector

  hs-source-dirs:   src
  default-language: GHC2021
